API KEY change, Auth and Database of Users

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,8 @@
 						</ul>
 					</li>
 					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
+					<li><a href="sign-up.html" class="button primary logged-out">Registrate o inicia sesión</a></li>
+					<li><a href="sign-up.html" class="button primary logged-out">Cerrar Sesión</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -138,9 +139,7 @@
 			<ul class="icons">
 				<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 				<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 				<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
