auth, login and registration of users in the database

--- a/src/login.html
+++ b/src/login.html
@@ -197,20 +197,7 @@
         <div class="shape"></div>
     </div>
     <form id="Formulario-Registro">
-        <h3>Registrate aquí</h3>
-
-        <label for="Usuario">Usuario</label>
-        <input type="text" placeholder="Ingresa tu nombre de usuario" id="Usuario">
-
-        <label for="Genero">Genero</label>
-        <select id="Genero">
-            <option value="Masculino">Masculino</option>
-            <option value="Femenino">Femenino</option>
-            <option value="otro">Otro</option>
-        </select>
-
-        <label for="Ciudad">Ciudad</label>
-        <input type="text" placeholder="Coloca el nombre de tu ciudad" id="Ciudad">
+        <h3>Inicia sesión</h3>
 
         <label for="Correo">Correo</label>
         <input type="text" placeholder="Ingresa tu correo electrónico" id="Correo">
@@ -218,7 +205,7 @@
         <label for="Contraseña">Contraseña</label>
         <input type="password" placeholder="Ingresa tu contraseña" id="Contraseña">
 
-        <label for="Genero">¿Ya estas registrado? <a href="login.html">Inicia sesión</a></label>
+        <label for="Genero">¿No estas registrado? <a href="sign-up.html">Registrate</a></label>
         <button>Iniciar Sesión</button>
     </form>
 </body>
