--- a/src/perfil.html
+++ b/src/perfil.html
@@ -15,36 +15,38 @@
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css" />
   </noscript>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body class="is-preload landing">
   <div id="page-wrapper">
     <!-- Header -->
     <header id="header">
-      <h1 id="logo"><a href="index.html">Perfil</a></h1>
+      <h1 id="logo"><a href="index.html" style="color: #fff;">Inicio</a></h1>
       <nav id="nav">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
           <li>
-            <a href="#">Layouts</a>
+            <a href="index.html" style="color: #fff;">Inicio</a>
+          </li>
+          <li>
+            <a href="#" style="color: #fff;">Layouts</a>
             <ul>
-              <li><a href="left-sidebar.html">Left Sidebar</a></li>
-              <li><a href="right-sidebar.html">Right Sidebar</a></li>
-              <li><a href="no-sidebar.html">No Sidebar</a></li>
               <li>
-                <a href="#">Submenu</a>
-                <ul>
-                  <li><a href="#">Option 1</a></li>
-                  <li><a href="#">Option 2</a></li>
-                  <li><a href="#">Option 3</a></li>
-                  <li><a href="#">Option 4</a></li>
-                </ul>
+                <a href="left-sidebar.html">Left Sidebar</a>
+              </li>
+              <li>
+                <a href="right-sidebar.html">Right Sidebar</a>
+              </li>
+              <li>
+                <a href="no-sidebar.html">No Sidebar</a>
               </li>
             </ul>
-          </li>
-          <li><a href="elements.html">Elements</a></li>
           <li>
-            <a href="sign-up.html" class="logged-out button primary">Registrate</a>
+            <a href="sign-up.html" class="logged-out button primary">
+              Registrate
+            </a>
+          </li>
           </li>
           <li>
             <a href="#" class="logged-in button primary" id="logOut">
@@ -57,12 +59,46 @@
 
     <!-- Banner -->
     <section id="banner">
-      <div class="content">
+      <div class="content Main-content">
         <!--
           CONTENIDO GENERADO AUTOMATICAMENTE POR UN SCRIPT
         -->
       </div>
     </section>
+
+    <!-- Modal para editar el perfil -->
+    <div class="modal fade" id="editarPerfilModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content bg-dark text-light">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Editar Perfil</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <!-- Campos de formulario para editar el perfil -->
+            <form class="editarPerfilForm">
+              <div class="mb-3">
+                <label for="genero" class="form-label text-light">Género</label>
+                <input type="text" class="form-control bg-dark text-light" id="Genero" placeholder="Ingrese su género">
+              </div>
+              <div class="mb-3">
+                <label for="nombreUsuario" class="form-label text-light">Nombre de Usuario</label>
+                <input type="text" class="form-control bg-dark text-light" id="NombreUsuario"
+                  placeholder="Ingrese su nombre de usuario">
+              </div>
+              <div class="mb-3">
+                <label for="ciudad" class="form-label text-light">Ciudad</label>
+                <input type="text" class="form-control bg-dark text-light" id="Ciudad" placeholder="Ingrese su ciudad">
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="submit" class="btn btn-primary" id="guardarCambios">Guardar Cambios</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer id="footer">
