change the desing

--- a/src/left-sidebar.html
+++ b/src/left-sidebar.html
@@ -5,130 +5,168 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Left Sidebar - Landed by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
+<head>
+	<title>Left Sidebar - Landed by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<script type="module" src="./main.js"></script>
+</head>
+
+<body class="is-preload">
+	<div id="page-wrapper">
+		<!-- Header -->
+		<header id="header">
+			<h1 id="logo"><a href="index.html" class="logged-out">Bienvenido</a></h1>
+			<h1 id="logo"><a href="perfil.html" class="logged-in">Perfil</a></h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="perfil.html" class="logged-in">Perfil</a></li>
+					<li>
+						<a href="#">Categorias</a>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="left-sidebar.html">Multijugador en línea</a></li>
+							<li><a href="right-sidebar.html">Combate</a></li>
+							<li><a href="no-sidebar.html">Shooters</a></li>
 						</ul>
-					</nav>
+					</li>
+					<li>
+						<a href="sign-up.html" class="logged-out button primary">Registrate</a>
+					</li>
+					<li>
+						<a href="#" class="logged-in button primary" id="logOut">
+							Cerrar Sesión
+						</a>
+					</li>
+				</ul>
+		</header>
+
+		<!-- Main -->
+		<div id="main" class="wrapper style1">
+			<div class="container">
+				<header class="major">
+					<h2>Multijugador en línea</h2>
+					<p>
+						Encuentra los mejores juegos multijugador, aquellos que te harán sentir una emoción extrema.
+					</p>
 				</header>
+				<div class="row gtr-150">
+					<div class="col-4 col-12-medium">
 
-			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<header class="major">
-							<h2>Left Sidebar</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
-						</header>
-						<div class="row gtr-150">
-							<div class="col-4 col-12-medium">
+						<!-- Sidebar -->
+						<section id="sidebar">
+							<section>
+								<a href="#" class="image fit"><img
+										src="https://i.pinimg.com/564x/3f/32/44/3f3244c7a06355f2d18bf1b74d3a7f49.jpg"
+										alt="" /></a>
+								<h3>Counter-Strike: Global Offensive (CS:GO)</h3>
+								<p>
+									CS:GO es un clásico juego de disparos en primera persona que se ha mantenido como
+									uno
+									de los favoritos de los jugadores durante años. Con su enfoque en la estrategia, el
+									trabajo en equipo y la habilidad individual, CS:GO ofrece una experiencia
+									competitiva intensa. Los jugadores pueden elegir entre una variedad de armas y
+									equipos mientras se enfrentan en emocionantes partidas donde la comunicación y la
+									coordinación son clave para la victoria. Con una gran comunidad y un constante
+									soporte de actualizaciones, CS:GO sigue siendo un referente en el género de los
+									shooters multijugador.
+								</p>
+							</section>
+							<hr />
+							<section>
+								<a href="#" class="image fit"><img
+										src="https://i.pinimg.com/564x/d4/ef/4e/d4ef4e36913f9ed9cd227432bf8a857c.jpg"
+										alt="" /></a>
+								<h3>Overwatch</h3>
+								<p>
+									Overwatch es un shooter en equipo que combina acción trepidante y personajes
+									carismáticos con una jugabilidad estratégica y cooperativa. Los jugadores eligen
+									entre una variedad de héroes, cada uno con habilidades únicas, y trabajan juntos
+									para cumplir objetivos en mapas vibrantes y dinámicos. Con un énfasis en la
+									diversidad y la inclusión, Overwatch ofrece una experiencia multijugador accesible
+									para jugadores de todos los niveles de habilidad. Con actualizaciones frecuentes,
+									eventos especiales y una comunidad apasionada, Overwatch continúa siendo uno de los
+									juegos más populares en su género.
+								</p>
+							</section>
+						</section>
 
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-									</section>
+					</div>
+					<div class="col-8 col-12-medium imp-medium">
 
-							</div>
-							<div class="col-8 col-12-medium imp-medium">
+						<!-- Content -->
+						<section id="content">
+							<a href="#" class="image fit"><img
+									src="https://i.pinimg.com/564x/7e/3c/57/7e3c576f47cb58f46f860a2fda96682a.jpg"
+									alt="" /></a>
+							<h3>Rainbow Six Siege</h3>
+							<p>
+								Rainbow Six Siege es un juego táctico que pone énfasis en la estrategia y la cooperación
+								entre jugadores. Ambientado en un mundo donde equipos de operadores especiales luchan en
+								emocionantes enfrentamientos, Siege ofrece una experiencia única donde la destrucción
+								del entorno y la planificación meticulosa son clave para el éxito.
+							</p>
+							<p>
+								Los jugadores eligen
+								entre una variedad de operadores, cada uno con habilidades especiales, y participan en
+								intensos combates en mapas diseñados para fomentar la táctica y la improvisación. Con un
+								enfoque en el juego competitivo y actualizaciones regulares, Rainbow Six Siege ofrece
+								una experiencia multijugador desafiante y gratificante.
+							</p>
 
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
-									</section>
+							<a href="#" class="image fit"><img
+									src="https://i.pinimg.com/564x/3b/87/03/3b870375eef94ea0b2e9b85ab0c9bce3.jpg"
+									alt="" /></a>
+							<h3>Call of Duty: Warzone.</h3>
+							<p>
+								Warzone es un battle royale que ha revolucionado el género con su combinación de acción
+								intensa y mecánicas de juego únicas. Ambientado en el universo de Call of Duty, Warzone
+								ofrece partidas masivas de hasta 150 jugadores en un mapa enorme y detallado.
+							</p>
+							<p>
+								Los jugadores pueden elegir entre una variedad de armas y equipos, así como utilizar
+								vehículos y tácticas de equipo para sobrevivir y ser el último en pie. Con
+								actualizaciones regulares y un enfoque en la comunidad, Warzone sigue siendo un destino
+								popular para los aficionados a los shooters multijugador.
+							</p>
+						</section>
 
-							</div>
-						</div>
 					</div>
 				</div>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
-
+			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://www.facebook.com/IA.0304MC" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/sans.jsx/" class="icon brands alt fa-instagram"><span
+							class="label">Instagram</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Irvin Alberto Moreno Cruz</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
 
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
