--- a/src/perfil.html
+++ b/src/perfil.html
@@ -23,30 +23,23 @@
   <div id="page-wrapper">
     <!-- Header -->
     <header id="header">
-      <h1 id="logo"><a href="index.html" style="color: #fff;">Inicio</a></h1>
+      <h1 id="logo"><a href="index.html" class="logged-out" style="color: white; text-decoration: none;">Bienvenido</a>
+      </h1>
+      <h1 id="logo"><a href="perfil.html" class="logged-in" style="color: white; text-decoration: none;">Perfil</a></h1>
       <nav id="nav">
         <ul>
+          <li><a href="index.html" style="color: white; text-decoration: none;">Inicio</a></li>
+          <li><a href="perfil.html" class="logged-in" style="color: white; text-decoration: none;">Perfil</a></li>
           <li>
-            <a href="index.html" style="color: #fff;">Inicio</a>
-          </li>
-          <li>
-            <a href="#" style="color: #fff;">Layouts</a>
+            <a href="#" style="color: white; text-decoration: none;">Categorias</a>
             <ul>
-              <li>
-                <a href="left-sidebar.html">Left Sidebar</a>
-              </li>
-              <li>
-                <a href="right-sidebar.html">Right Sidebar</a>
-              </li>
-              <li>
-                <a href="no-sidebar.html">No Sidebar</a>
-              </li>
+              <li><a href="left-sidebar.html">Multijugador en linea</a></li>
+              <li><a href="right-sidebar.html">Combate</a></li>
+              <li><a href="no-sidebar.html">Shooters</a></li>
             </ul>
-          <li>
-            <a href="sign-up.html" class="logged-out button primary">
-              Registrate
-            </a>
           </li>
+          <li>
+            <a href="sign-up.html" class="logged-out button primary">Registrate</a>
           </li>
           <li>
             <a href="#" class="logged-in button primary" id="logOut">
@@ -54,7 +47,6 @@
             </a>
           </li>
         </ul>
-      </nav>
     </header>
 
     <!-- Banner -->
@@ -103,21 +95,13 @@
     <!-- Footer -->
     <footer id="footer">
       <ul class="icons">
-        <li>
-          <a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a>
-        </li>
-        <li>
-          <a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
-        </li>
-        <li>
-          <a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a>
-        </li>
-        <li>
-          <a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a>
-        </li>
+        <li><a href="https://www.facebook.com/IA.0304MC" class="icon brands alt fa-facebook-f"><span
+              class="label">Facebook</span></a></li>
+        <li><a href="https://www.instagram.com/sans.jsx/" class="icon brands alt fa-instagram"><span
+              class="label">Instagram</span></a></li>
       </ul>
       <ul class="copyright">
-        <li>&copy; Untitled. All rights reserved.</li>
+        <li>&copy; Irvin Alberto Moreno Cruz</li>
         <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
       </ul>
     </footer>
