--- a/src/right-sidebar.html
+++ b/src/right-sidebar.html
@@ -5,130 +5,152 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Right Sidebar - Landed by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
+<head>
+	<title>Right Sidebar - Landed by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<script type="module" src="./main.js"></script>
+</head>
+
+<body class="is-preload">
+	<div id="page-wrapper">
+		<!-- Header -->
+		<header id="header">
+			<h1 id="logo"><a href="index.html" class="logged-out">Bienvenido</a></h1>
+			<h1 id="logo"><a href="perfil.html" class="logged-in">Perfil</a></h1>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="perfil.html" class="logged-in">Perfil</a></li>
+					<li>
+						<a href="#">Categorias</a>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="left-sidebar.html">Multijugador en linea</a></li>
+							<li><a href="right-sidebar.html">Combate</a></li>
+							<li><a href="no-sidebar.html">Shooters</a></li>
 						</ul>
-					</nav>
+					</li>
+					<li>
+						<a href="sign-up.html" class="logged-out button primary">Registrate</a>
+					</li>
+					<li>
+						<a href="#" class="logged-in button primary" id="logOut">
+							Cerrar Sesión
+						</a>
+					</li>
+				</ul>
+		</header>
+
+		<!-- Main -->
+		<div id="main" class="wrapper style1">
+			<div class="container">
+				<header class="major">
+					<h2>Combate</h2>
+					<p>Increibles videojuegos llenos de acción donde te veras forzado a dar lo mejor de tí si quieres
+						vencer</p>
 				</header>
+				<div class="row gtr-150">
+					<div class="col-8 col-12-medium">
 
-			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<header class="major">
-							<h2>Right Sidebar</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
-						</header>
-						<div class="row gtr-150">
-							<div class="col-8 col-12-medium">
+						<!-- Content -->
+						<section id="content">
+							<a href="#" class="image fit"><img
+									src="https://i.pinimg.com/564x/2f/66/07/2f6607220dc452fd04294908573a878a.jpg"
+									alt="" /></a>
+							<h3>Super Smash Bros. Ultimate.</h3>
+							<p>Super Smash Bros. Ultimate es un juego de lucha crossover que presenta a una amplia
+								variedad de personajes icónicos de videojuegos, desde Mario y Link hasta Sonic y
+								Pikachu. Los jugadores compiten en emocionantes combates en plataformas, utilizando una
+								variedad de ataques y movimientos especiales para enviar a sus oponentes fuera del
+								escenario.</p>
+							<p>Con modos de juego para un solo jugador y multijugador, así como un extenso elenco de
+								personajes y escenarios, Super Smash Bros. Ultimate ofrece una experiencia de lucha
+								divertida y accesible para jugadores de todas las edades.</p>
+							<a href="#" class="image fit"><img
+									src="https://i.pinimg.com/564x/6c/3e/06/6c3e06aa7c7a2b033beaf973c3967b2f.jpg"
+									alt="" /></a>
+							<h3>Dragon Ball FighterZ.</h3>
+							<p>Dragon Ball FighterZ es un juego de lucha basado en la popular serie de anime Dragon
+								Ball, que presenta a los personajes icónicos de la franquicia en emocionantes combates
+								uno contra uno. Los jugadores pueden formar equipos de tres luchadores y realizar una
+								variedad de ataques y combos espectaculares mientras luchan por la supremacía en el
+								campo de batalla.</p>
+							<p>Con gráficos cel-shaded impresionantes que capturan el estilo visual único del anime,
+								Dragon Ball FighterZ ofrece una experiencia de lucha emocionante y visualmente
+								impresionante para los fans de la serie y los aficionados a los juegos de lucha.</p>
+						</section>
 
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
-									</section>
+					</div>
+					<div class="col-4 col-12-medium">
 
-							</div>
-							<div class="col-4 col-12-medium">
+						<!-- Sidebar -->
+						<section id="sidebar">
+							<section>
+								<a href="#" class="image fit"><img
+										src="https://i.pinimg.com/564x/8b/07/41/8b0741e3ebeb8b0e590474ad27c65fb9.jpg"
+										alt="" /></a>
+								<h3>Mortal Kombat 11.</h3>
+								<p>Mortal Kombat 11 es la última entrega de la icónica serie de juegos de lucha,
+									conocida por su violencia gráfica y sus brutales movimientos de finalización. Los
+									jugadores eligen entre una variedad de luchadores clásicos y nuevos, cada uno con su
+									propio estilo de lucha y movimientos especiales, y participan en combates
+									sangrientos y frenéticos uno contra uno.</p>
+								<p>Con gráficos realistas y mecánicas de juego refinadas, Mortal Kombat 11 ofrece una
+									experiencia de lucha visceral y satisfactoria que sigue siendo popular entre los
+									aficionados al género.</p>
+							</section>
+							<hr />
+							<section>
+								<a href="#" class="image fit"><img
+										src="https://i.pinimg.com/564x/ea/0b/f7/ea0bf74da156db045c366f73eca35af0.jpg"
+										alt="" /></a>
+								<h3>Street Fighter V.</h3>
+								<p>Street Fighter V es la última entrega de la legendaria serie de juegos de lucha que
+									ha definido el género durante décadas. Los jugadores eligen entre una variedad de
+									luchadores clásicos y nuevos, cada uno con su propio conjunto único de movimientos y
+									habilidades, y compiten en emocionantes combates uno contra uno.</p>
+								<p>Con gráficos impresionantes y mecánicas de juego refinadas, Street Fighter V ofrece
+									una experiencia de lucha profunda y satisfactoria que sigue atrayendo a jugadores de
+									todo el mundo.</p>
+							</section>
+						</section>
 
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-									</section>
-
-							</div>
-						</div>
 					</div>
 				</div>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
-
+			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://www.facebook.com/IA.0304MC" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/sans.jsx/" class="icon brands alt fa-instagram"><span
+							class="label">Instagram</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Irvin Alberto Moreno Cruz</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
 
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.dropotron.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
